--- a/elastic_deploy.yml
+++ b/elastic_deploy.yml
@@ -2,50 +2,61 @@
 - hosts: servers
   become: true
   tasks:
+    - name: configuracion de sysctl
+      sysctl:
+        name: vm.max_map_count
+        value: "262144"
+        state: present
+      tags: skipe
+
+    - name: deshabilitando swap
+      command: swapoff -a
+      tags: skipe
+
     - name: crear directorio para datos de elasticsearch
       file:
         path: /esdata
         state: directory
-        owner: 1000
-        group: 1000
+        owner: "1000"
+        group: "1000"
         mode: 0775
 
     - name: crear directorio para archivos de configuración de elasticsearch
       file:
         path: /opt/elastic
         state: directory
-        owner: 1000
-        group: 1000
+        owner: "1000"
+        group: "1000"
         mode: 0775
 
     - name: crear directorio para los certificados
       file:
         path: /opt/elastic/certs
         state: directory
-        owner: 1000
-        group: 1000
+        owner: "1000"
+        group: "1000"
         mode: 0775
 
     - name: desplegar los certificados de elasticsearch
       copy:
         src: ./elastic/certs
         dest: /opt/elastic
-        owner: 1000
-        group: 1000
+        owner: "1000"
+        group: "1000"
         mode: "0640"
 
     - name: despliegues del docker-compose
       ansible.builtin.template:
         src: ./elastic/docker-compose.j2
         dest: /opt/elastic/docker-compose.yml
-        owner: 1000
-        group: 1000
+        owner: "1000"
+        group: "1000"
         mode: "0644"
 
     - name: despliegues del elasticsearch.yml
       ansible.builtin.template:
         src: ./elastic/elasticsearch.j2
         dest: /opt/elastic/elasticsearch.yml
-        owner: 1000
-        group: 1000
+        owner: "1000"
+        group: "1000"
         mode: "0644"
