--- a/deploy_docker.yml
+++ b/deploy_docker.yml
@@ -34,6 +34,17 @@
         - docker-ce-cli
         - containerd.io
 
+    - name: instalar pip
+      apt:
+        name: "python3-pip"
+        state: latest
+        update_cache: yes
+
+    - name: instalar docker-py
+      pip:
+        name: "docker-py"
+        state: latest
+
     - name: levantar el servicio y verificar que esta ok
       service:
         name: docker
